# tiger.cc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  artifactory.oa.com.crt  doc.md
examples/: example.tig  example_dec.scm  example_dec.tig
examples/declarations/: array.tig  class1.tig  class2.tig  class3.tig  function1.tig  function2.tig  import.tig  method1.tig  method2.tig  name_space.tig  primitive.tig  record.tig  recursive_type.tig  variable.tig
examples/expressions/: assign1.tig  assign2.tig  assign3.tig  assign4.tig  bool.tig  for.tig  func_call.tig  if_then.tig  if_then_else.tig  nil.tig  seq.tig  string.tig  while.tig
src/: CMakeLists.txt
src/tiger/: ast.cc  ast.h  codegen.h  common.h  env.h  ir.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  scope.h  symbol.cc  symbol.h  token.cc  token.h  type.h  type_checker.cc  type_checker.h  visitor.h
src/utils/: error.cc  error.h  file_reader.h  macros.h  printer.h  stringfy.h
test/: CMakeLists.txt  lexer_test.cc  parser_test.cc
test/testcases/: queens.tig  test49.tig
